// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`trade ship scenarios > a thousand ports each, giant map 1`] = `
{
  "a": {
    "arrivalsPerMinute": 146.2,
    "goldPerMinute": 62940000,
    "shipsArrived": 1462,
    "shipsSent": 1509,
    "tradeGold": 629380352n,
  },
  "b": {
    "arrivalsPerMinute": 135.5,
    "goldPerMinute": 62940000,
    "shipsArrived": 1355,
    "shipsSent": 1454,
    "tradeGold": 629380352n,
  },
  "goldPerTrade": 223400,
}
`;

exports[`trade ship scenarios > across the ocean 1`] = `
{
  "a": {
    "arrivalsPerMinute": 5.8,
    "goldPerMinute": 873400,
    "shipsArrived": 29,
    "shipsSent": 34,
    "tradeGold": 4367220n,
  },
  "b": {
    "arrivalsPerMinute": 6.2,
    "goldPerMinute": 873400,
    "shipsArrived": 31,
    "shipsSent": 37,
    "tradeGold": 4367220n,
  },
  "goldPerTrade": 72790,
}
`;

exports[`trade ship scenarios > across the ocean, level-3 port 1`] = `
{
  "a": {
    "arrivalsPerMinute": 16.6,
    "goldPerMinute": 1660000,
    "shipsArrived": 83,
    "shipsSent": 92,
    "tradeGold": 8297718n,
  },
  "b": {
    "arrivalsPerMinute": 6.2,
    "goldPerMinute": 1660000,
    "shipsArrived": 31,
    "shipsSent": 37,
    "tradeGold": 8297718n,
  },
  "goldPerTrade": 72790,
}
`;

exports[`trade ship scenarios > fifty ports each, long route 1`] = `
{
  "a": {
    "arrivalsPerMinute": 76.5,
    "goldPerMinute": 23180000,
    "shipsArrived": 510,
    "shipsSent": 775,
    "tradeGold": 154522281n,
  },
  "b": {
    "arrivalsPerMinute": 81.15,
    "goldPerMinute": 23180000,
    "shipsArrived": 541,
    "shipsSent": 820,
    "tradeGold": 154522281n,
  },
  "goldPerTrade": 147000,
}
`;

exports[`trade ship scenarios > long haul 1`] = `
{
  "a": {
    "arrivalsPerMinute": 3.75,
    "goldPerMinute": 1157000,
    "shipsArrived": 25,
    "shipsSent": 40,
    "tradeGold": 7716146n,
  },
  "b": {
    "arrivalsPerMinute": 4.35,
    "goldPerMinute": 1157000,
    "shipsArrived": 29,
    "shipsSent": 46,
    "tradeGold": 7716146n,
  },
  "goldPerTrade": 142900,
}
`;

exports[`trade ship scenarios > short coastal hop 1`] = `
{
  "a": {
    "arrivalsPerMinute": 7.6,
    "goldPerMinute": 73190,
    "shipsArrived": 38,
    "shipsSent": 39,
    "tradeGold": 365927n,
  },
  "b": {
    "arrivalsPerMinute": 7,
    "goldPerMinute": 73190,
    "shipsArrived": 35,
    "shipsSent": 37,
    "tradeGold": 365927n,
  },
  "goldPerTrade": 5013,
}
`;

exports[`trade ship scenarios > ten ports each across the ocean 1`] = `
{
  "a": {
    "arrivalsPerMinute": 45.6,
    "goldPerMinute": 8377000,
    "shipsArrived": 228,
    "shipsSent": 269,
    "tradeGold": 41883947n,
  },
  "b": {
    "arrivalsPerMinute": 44.4,
    "goldPerMinute": 8377000,
    "shipsArrived": 222,
    "shipsSent": 261,
    "tradeGold": 41883947n,
  },
  "goldPerTrade": 93080,
}
`;

exports[`trade ship scenarios > ten ports, ~500-tile route 1`] = `
{
  "a": {
    "arrivalsPerMinute": 41.8,
    "goldPerMinute": 8636000,
    "shipsArrived": 209,
    "shipsSent": 260,
    "tradeGold": 43177752n,
  },
  "b": {
    "arrivalsPerMinute": 41,
    "goldPerMinute": 8636000,
    "shipsArrived": 205,
    "shipsSent": 252,
    "tradeGold": 43177752n,
  },
  "goldPerTrade": 104300,
}
`;

exports[`trade ship scenarios > ten ports, ~1800-tile route 1`] = `
{
  "a": {
    "arrivalsPerMinute": 27.6,
    "goldPerMinute": 9416000,
    "shipsArrived": 276,
    "shipsSent": 385,
    "tradeGold": 94160600n,
  },
  "b": {
    "arrivalsPerMinute": 28.4,
    "goldPerMinute": 9416000,
    "shipsArrived": 284,
    "shipsSent": 402,
    "tradeGold": 94160600n,
  },
  "goldPerTrade": 168100,
}
`;

exports[`train scenarios > external city in the cluster 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 335000n,
  "aGoldPerMinute": 67000,
  "aSelfTradeGold": 335000n,
  "bExternalTradeGold": 225000n,
  "bGoldDelta": 225000n,
  "trainUnitsSeen": 140,
}
`;

exports[`train scenarios > factory and four cities 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 190000n,
  "aGoldPerMinute": 38000,
  "aSelfTradeGold": 190000n,
  "bExternalTradeGold": 0n,
  "bGoldDelta": 0n,
  "trainUnitsSeen": 133,
}
`;

exports[`train scenarios > factory and one city 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 200000n,
  "aGoldPerMinute": 40000,
  "aSelfTradeGold": 200000n,
  "bExternalTradeGold": 0n,
  "bGoldDelta": 0n,
  "trainUnitsSeen": 140,
}
`;

exports[`train scenarios > two factories and two cities 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 260000n,
  "aGoldPerMinute": 52000,
  "aSelfTradeGold": 260000n,
  "bExternalTradeGold": 0n,
  "bGoldDelta": 0n,
  "trainUnitsSeen": 238,
}
`;
